--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteBase /
+RewriteBase /VotePlayer
 ErrorDocument 403 /Error/403
 ErrorDocument 404 /Error/404
 ErrorDocument 500 /Error/500
