Update composer file to use latest version of fredyframework.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "nahakiole/fredyframework": "dev-develop"
+        "nahakiole/fredyframework": "@dev"
     },
     "minimum-stability": "dev"
 }
